Fixed: Visting a page where the PM popup is disabled still marked the message as notified. Fixed: Incorrectly encoded url in final_uri argument to index.php Fixed: html_draw_bottom() was including the </body> tag in pm.php Fixed: IE7 text alignment in user agreement and html_*_msg functions.

--- a/forum/styles/Default/style.css
+++ b/forum/styles/Default/style.css
@@ -1176,6 +1176,7 @@ a {
     width: 500px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
+    text-align: left;
 }
 
 .post_options {
@@ -1216,10 +1217,20 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
 
 .error_msg ul li {
     padding-bottom: 5px;
+    text-align: left;
+}
+
+.error_msg_icon {
+    padding-right: 0px;
+}
+
+.error_msg_text {
+    padding-left: 0px;
 }
 
 .success_msg {
@@ -1230,6 +1241,15 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
+}
+
+.success_msg_icon {
+    padding-right: 0px;
+}
+
+.success_msg_text {
+    padding-left: 0px;
 }
 
 .warning_msg {
@@ -1240,4 +1260,13 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
+}
+
+.warning_msg_icon {
+    padding-right: 0px;
+}
+
+.warning_msg_text {
+    padding-left: 0px;
 }
