--- a/forum/styles/apple/style.css
+++ b/forum/styles/apple/style.css
@@ -1171,6 +1171,7 @@ a {
     width: 500px;
     padding: 0px 10px 0px 10px;
     overflow: auto;
+    text-align: left;
 }
 
 .post_options {
@@ -1211,10 +1212,12 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
 
 .error_msg ul li {
     padding-bottom: 5px;
+    text-align: left;
 }
 
 .success_msg {
@@ -1225,6 +1228,7 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
 
 .warning_msg {
@@ -1235,4 +1239,5 @@ a {
     padding: 10px;
     margin: 10px 0px 10px 0px;
     max-width: 100%;
+    text-align: left;
 }
